--- a/Week_2/HTML/Class_Example_Code/index.html
+++ b/Week_2/HTML/Class_Example_Code/index.html
@@ -23,7 +23,42 @@
 </head>
 
 <body>
-	
+    <p>This is a page with some basic <em>HTML elements</em>. We will update and add to this example as we move on.</p>
+    <!-- Header tags: h1 is the most important, h6 is the least, h1 renders the biggest. all header tags assign more heirarchical value -->
+    <h1>This is a H1 header</h1>
+    <h2>This is a H2</h2>
+    <h3>This is a H3</h3>
+    <h4>This is a H4</h4>
+    <h5>This is a H5</h5>
+    <h6>This is a H6</h6>
+
+    <p> This paragraph has a bold tag. <strong>This sentence is bold because it is wrapped in the strong tag.</strong> <em>This sentence is italicized because is is wrapped in an em tag.</em></p>
+
+    <p>This is third paragraph <br/>with <br/>line <br/>breaks</p>
+
+    <p>This is third paragraph</p>
+    <p>with</p>
+    <p>separate p tag markup</p>
+
+    <p>This paragraph has a small tag nested within. <small>This text is smaller!</small></p>
+
+    <!-- Unordered List -->
+	<ul>
+		<li>Item 1</li>
+		<li>Item 2</li>
+		<li>Item 3</li>
+	</ul>
+
+	<!-- Ordered List -->
+	<ol>
+		<li>Item 1</li>
+		<li>Item 2</li>
+		<li>Item 3</li>
+	</ol>
+
+
+
+
 
 
 
