--- a/Week_2/HTML/Class_Example_Code/index.html
+++ b/Week_2/HTML/Class_Example_Code/index.html
@@ -25,42 +25,50 @@
 <body>
     <p>This is a page with some basic <em>HTML elements</em>. We will update and add to this example as we move on.</p>
     <!-- Header tags: h1 is the most important, h6 is the least, h1 renders the biggest. all header tags assign more heirarchical value -->
+    <hr id="top"/>
     <h1>This is a H1 header</h1>
     <h2>This is a H2</h2>
     <h3>This is a H3</h3>
     <h4>This is a H4</h4>
     <h5>This is a H5</h5>
     <h6>This is a H6</h6>
-
     <p> This paragraph has a bold tag. <strong>This sentence is bold because it is wrapped in the strong tag.</strong> <em>This sentence is italicized because is is wrapped in an em tag.</em></p>
-
-    <p>This is third paragraph <br/>with <br/>line <br/>breaks</p>
-
+    <p>This is third paragraph
+        <br/>with
+        <br/>line
+        <br/>breaks</p>
     <p>This is third paragraph</p>
     <p>with</p>
     <p>separate p tag markup</p>
-
     <p>This paragraph has a small tag nested within. <small>This text is smaller!</small></p>
-
     <!-- Unordered List -->
-	<ul>
-		<li>Item 1</li>
-		<li>Item 2</li>
-		<li>Item 3</li>
-	</ul>
+    <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+    </ul>
+    <!-- Ordered List -->
+    <ol>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+    </ol>
+    <!-- Image Notes -->
+    <p>This is a sample image tag. If someone has a screen reader they will still understand the content of your page. </p>
+    <img src="http://www.insideedition.com/images/stories/1602/14594.jpg" alt="Evil sneaky goat" title="Bad Goat" />
+    <img src="http://animalia-life.com/data_images/goat/goat4.jpg" alt="Mr Steal yo Gurl" title="Handsome Goat" width="300" height="300" />
+    <!-- Anchor Tags -->
+    <!-- Target _blank will open the link in a new window -->
+    <p> Learn more about
+        <a href="https://en.wikipedia.org/wiki/Kermit_the_Frog" target="_blank">
+		Kermit the Frog
+		</a> on wikipedia.
+    </p>
 
-	<!-- Ordered List -->
-	<ol>
-		<li>Item 1</li>
-		<li>Item 2</li>
-		<li>Item 3</li>
-	</ol>
+    <p>This is a link to email someone. For example: <br> 
+    <a href="mailto:info@yourwebsite.com">contact us</a></p>
 
-
-
-
-
-
+    <p>This is a link to the top of the page using an ID as the href! <a href="#top">Go To Top</a></p>
 
 </body>
 
