In class examples and notes for Week 2 and 3

--- a/Week_2/Links_Directories_Servers/In_Class/Site_1/contact.html
+++ b/Week_2/Links_Directories_Servers/In_Class/Site_1/contact.html
@@ -10,7 +10,11 @@
 
 <body>
     <!-- Place your Nav Links Here -->
+    <nav>
+    	<!-- use UL LI and A for Nav Links within our NAV tag -->
+    </nav>
     <h1>Contact Us</h1>
+
     <!-- Bonus - Place Images Here -->
     <!-- Double Bonus - Make a Contact Form -->
 </body>
