--- a/Week_2/Links_Directories_Servers/In_Class/Site_2/index.html
+++ b/Week_2/Links_Directories_Servers/In_Class/Site_2/index.html
@@ -10,6 +10,9 @@
 
 <body>
     <!-- Place your Nav Links Here -->
+    <nav>
+    	<!-- use UL LI and A for Nav Links within our NAV tag -->
+    </nav>
     <h1>Homepage</h1>
     <!-- Bonus - Place Images Here -->
 </body>
