--- a/Week_2/Links_Directories_Servers/In_Class/Site_1/about.html
+++ b/Week_2/Links_Directories_Servers/In_Class/Site_1/about.html
@@ -10,7 +10,11 @@
 
 <body>
     <!-- Place your Nav Links Here -->
+    <nav>
+    	<!-- use UL LI and A for Nav Links within our NAV tag -->
+    </nav>
     <h1>About Us</h1>
+
     <!-- Bonus - Place Images Here -->
 </body>
 
