--- a/Week_2/Links_Directories_Servers/In_Class/Site_1/index.html
+++ b/Week_2/Links_Directories_Servers/In_Class/Site_1/index.html
@@ -12,6 +12,11 @@
     <!-- Place your Nav Links Here -->
     <nav>
     	<!-- use UL LI and A for Nav Links within our NAV tag -->
+    	<ul>
+    		<li><a href="./index.html">Home</a></li>
+    		<li><a href="about.html">About</a></li>
+    		<li><a href="contact.html">Contact</a></li>
+    	</ul>
     </nav>
     <h1>Homepage</h1>
     
