--- a/Week_2/Links_Directories_Servers/In_Class/Site_2/about/index.html
+++ b/Week_2/Links_Directories_Servers/In_Class/Site_2/about/index.html
@@ -11,7 +11,12 @@
 <body>
     <!-- Place your Nav Links Here -->
     <nav>
-    	<!-- use UL LI and A for Nav Links within our NAV tag -->
+        <!-- use UL LI and A for Nav Links within our NAV tag -->
+        <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="./index.html">About</a></li>
+            <li><a href="../contact/index.html">Contact</a></li>
+        </ul>
     </nav>
     <h1>About Us</h1>
     <!-- Bonus - Place Images Here -->
