added finished gallery

--- a/Week_3/Gallery/Gallery_Finished/index.html
+++ b/Week_3/Gallery/Gallery_Finished/index.html
@@ -4,7 +4,11 @@
 <head>
     <title>New York City Gallery</title>
     <!-- Link to CSS File here -->
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <!-- Link to Google Font Here -->
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
+    <!-- or we can import the font file from google -->
+
 </head>
 
 <body>
