added in class examples

--- a/Week_6/Portfolio_Page/index.html
+++ b/Week_6/Portfolio_Page/index.html
@@ -16,6 +16,7 @@
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/base.css">
 	<link rel="stylesheet" href="css/grid.css">
+
 	<link rel="stylesheet" href="css/style.css">
 
 
@@ -26,6 +27,42 @@
 
 </div>
 <div class="container clearfix">
+
+	<div class="grid_4">
+		<div class="view view-portfolio">
+			<img src="img/1.jpg"/>
+			<div class="mask">
+				<h2>Portfolio Item</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris dapibus sit amet urna at tristique.</p>
+				<a href="#" class="info">Read More</a>
+			</div>
+		</div>
+	</div>
+
+	<div class="grid_4">
+		<div class="view view-portfolio">
+			<img src="img/2.jpg"/>
+			<div class="mask">
+				<h2>Portfolio Item</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris dapibus sit amet urna at tristique.</p>
+				<a href="#" class="info">Read More</a>
+			</div>
+		</div>
+	</div>
+
+	<div class="grid_4">
+		<div class="view view-portfolio">
+			<img src="img/3.jpg"/>
+			<div class="mask">
+				<h2>Portfolio Item</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris dapibus sit amet urna at tristique.</p>
+				<a href="#" class="info">Read More</a>
+			</div>
+		</div>
+	</div>
+
+
+
 
 </div>
 <!-- end .container -->
