added intro to bootstrap

--- a/Week_9/Student_Shuffle/index.html
+++ b/Week_9/Student_Shuffle/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <button onclick="listStudents();">List Students</button>
-<!-- <button onclick="sortStudents();">Sort Students</button> -->
+<button onclick="sortStudents();">Sort Students</button>
 <button onclick="shuffleStudents();">Shuffle Students</button>
 <div id="content"></div>
 
