--- a/Week_10/Bootstrap_Modal/In_Class/index.html
+++ b/Week_10/Bootstrap_Modal/In_Class/index.html
@@ -72,19 +72,19 @@
         <button type="button" class="btn btn-primary btn-lg">Open Modal!</button>
         <!-- Preformatted text for popup modal definition -->
         <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-6">
+            <div class="col-xs-12 col-sm-12 col-md-6 col-md-offset-3" style="padding-top:70px;">
                 <pre>
-                Was this fair paper, this most goodly book,
-                Made to write 'whore' upon? What committed!
-                Committed! O thou public commoner!
-                I should make very forges of my cheeks,
-                That would to cinders burn up modesty,
-                Did I but speak thy deeds. What committed!
-                Heaven stops the nose at it and the moon winks,
-                The bawdy wind that kisses all it meets
-                Is hush'd within the hollow mine of earth,
-                And will not hear it. What committed!
-                Impudent <a href="#">strumpet</a>!
+Was this fair paper, this most goodly book,
+Made to write 'whore' upon? What committed!
+Committed! O thou public commoner!
+I should make very forges of my cheeks,
+That would to cinders burn up modesty,
+Did I but speak thy deeds. What committed!
+Heaven stops the nose at it and the moon winks,
+The bawdy wind that kisses all it meets
+Is hush'd within the hollow mine of earth,
+And will not hear it. What committed!
+Impudent <a href="#">strumpet</a>!
                 </pre>
             </div>
         </div>
