--- a/Week_10/Bootstrap_Carousel/index-data.html
+++ b/Week_10/Bootstrap_Carousel/index-data.html
@@ -15,12 +15,61 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <style type="text/css">
+    img {
+        width: 100%;
+    }
+    
+    div.wrapper {
+        width: 600px;
+        margin: 0 auto;
+    }
+    .carousel-caption{
+        color: orange;
+    }
+    
+    </style>
 </head>
 
 <body>
-
-
-   
+    <div class="wrapper">
+        <!-- Begin Carousel -->
+        <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="1000" data-pause="hover">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+            </ol>
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" role="listbox">
+                <div class="item active">
+                    <img src="img/goat-1.jpg" alt="Goats in Tree">
+                    <div class="carousel-caption">
+                        <h3>Goats</h3>
+                        <p>goats can climb more than mountains!</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="img/goat-2.jpg" alt="Goats in Tree">
+                </div>
+                <div class="item">
+                    <img src="img/goat-3.jpg" alt="Goats in Tree">
+                </div>
+            </div>
+            <!-- Left and right controls -->
+            <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+        <!-- End Carousel -->
+    </div>
+    <!-- end wrapper -->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
