--- a/Week_10/Bootstrap_Carousel/index-jq.html
+++ b/Week_10/Bootstrap_Carousel/index-jq.html
@@ -23,12 +23,76 @@
 </head>
 
 <body>
-    
+    <!-- Begin Carousel -->
+    <div id="myCarousel" class="carousel slide">
+        <ol class="carousel-indicators">
+            <li class="item1" class="active"></li>
+            <li class="item2" ></li>
+            <li class="item3"></li>
+        </ol>
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+            <div class="item active">
+                <img src="img/goat-1.jpg" alt="Goats in Tree">
+            </div>
+            <div class="item">
+                <img src="img/goat-2.jpg" alt="Goats in Tree">
+            </div>
+            <div class="item">
+                <img src="img/goat-3.jpg" alt="Goats in Tree">
+            </div>
+        </div>
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#myCarousel" role="button" >
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" role="button" >
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+    <!-- End Carousel -->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
-   
+
+    <script type="text/javascript">
+        $(document).ready(function(){
+
+            $("#myCarousel").carousel({
+                interval: 5000, 
+                pause: "hover"
+            });
+
+            //PREV NEXT BUTTONS
+            $(".left").click(function(){
+                $("#myCarousel").carousel("prev");
+            });
+            $(".right").click(function(){
+                $("#myCarousel").carousel("next");
+            });
+
+            //ENABLING CAROUSEL SLIDE INDICATORS
+            $(".item1").click(function(){
+                $("#myCarousel").carousel(0);
+            });
+
+            $(".item2").click(function(){
+                 $("#myCarousel").carousel(1);
+            });
+
+            $(".item3").click(function(){
+                 $("#myCarousel").carousel(2);
+            });
+
+        });
+
+
+
+
+    </script>
 </body>
 
 </html>
