added random flying goats

--- a/Week_13/Random/index.html
+++ b/Week_13/Random/index.html
@@ -2,16 +2,15 @@
 <html>
 
 <head>
+    <title>GOATS IN SPACE!</title>
     <link href='http://fonts.googleapis.com/css?family=Asap:400,700' rel='stylesheet' type='text/css'>
     <style>
     body {
-
         background: black;
         margin: 5% 15% 0 15%;
         overflow: hidden;
     }
     
-
     .img {
         width: 100px;
         height: 100px;
@@ -73,7 +72,63 @@
     <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
     <!-- Our custom script -->
     <script type="text/javascript">
+    // instantiate a new timeline object and add some parameters
+    tl = new TimelineMax({
+        delay: 0.5,
+        repeat: 0
+    });
+    //add explode label 15 seconds after reset animation is done
+    tl.add("explode", "+=30");
 
+    //IMG timeline
+    //for each image in our array of .img elements call this function and gain access to its index in the array as the parameter index
+    $(".img").each(function(index) {
+
+        tl.from(this, 5, {
+            delay: 0.1,
+            scale: -1,
+            x: randomNumber(-500, 2000),
+            y: randomNumber(-500, 1000),
+            z: -1,
+            opacity: 0,
+            rotation: randomNumber(-180, 180)
+        }, Math.random() * 1.5);
+
+        tl.to(this, 5, {
+            x: randomNumber(-500, 2000),
+            y: randomNumber(-500, 1000),
+            z: randomNumber(100, 500),
+            opacity: 0,
+            rotation: randomNumber(-360, 720),
+            rotationX: randomNumber(-360, 360),
+            rotationY: randomNumber(-360, 360)
+        }, "explode+=" + Math.random() * 0.5);
+
+    });
+
+    //click to center a goat
+    var $img = $(".box");
+
+    $img.click(function(){
+        var centerX = ($(window).width() / 2-75);
+        var centerY = ($(window).height() / 2-75);
+        var pos = $(this).position();
+        var distX = centerX - pos.left;
+        var distY = centerY - pos.top;
+
+        TweenMax.to(this, 3, {
+            x: distX,
+            y: distY,
+            z: 100,
+            scale: 2,
+            ease: Power2.easeIn
+        });
+    });
+
+    //helper function for random math within a range as whole numbers
+    function randomNumber(min, max) {
+        return Math.floor(Math.random() * (1 + max - min) + min);
+    }
     </script>
 </body>
 
