--- a/Week_14/SASS/In_Class/index.html
+++ b/Week_14/SASS/In_Class/index.html
@@ -3,24 +3,29 @@
 
 <head>
     <title>SASS Crash Course</title>
-    <link rel="stylesheet" type="text/css" href="css/main.scss">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 
 <body>
     <header>
-        <a href="https://opentrons.com" class="brand">
+        <a href="#" class="brand">
             <h1 class="top-nav-logo">Goats R Us</h1>
         </a>
+        <div class="nav-collapse">
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
+        </div>
         <nav>
             <ul id="main">
                 <li>
-                    <a href="" class="menu-toggle" >Products</a>
+                    <a href="#" class="menu-toggle" data-dropdown=".products">Products</a>
                 </li>
                 <li>
-                    <a href="" class="menu-toggle" >Company</a>
+                    <a href="" class="menu-toggle" data-dropdown=".company">Company</a>
                 </li>
                 <li>
-                    <a href="" class="menu-toggle" >Resources</a>
+                    <a href="" class="menu-toggle" data-dropdown=".resources">Resources</a>
                 </li>
                 <li>
                     <a href="">Buy</a>
