added mobile nav scripts, vars, color scripts

--- a/Week_14/SASS/In_Class/index.html
+++ b/Week_14/SASS/In_Class/index.html
@@ -60,7 +60,12 @@
     <div id="nav-spacer">&nbsp;</div>
 
 	<main>
-		<p>Some content to push down with our nav</p>
+    <!-- Sample Divs for Color Scripts in SASS -->
+		<!-- <div>Primary Brand</div>
+        <div class="darken">Darken</div>
+        <div class="lighten">Lighten</div>
+        <div class="complement">Complement</div>
+        <div class="invert">Invert</div> -->
 	</main>
 
     <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous">
