simple gallery example

--- a/Week_14/SASS/In_Class/index.html
+++ b/Week_14/SASS/In_Class/index.html
@@ -66,11 +66,29 @@
         <div class="lighten">Lighten</div>
         <div class="complement">Complement</div>
         <div class="invert">Invert</div> -->
+
+    <!-- Gallery Example -->
+    <section class="goats">
+        <div class="image-gallery">
+            <div class="navigation">
+                <div id="navigation-dots"></div>
+            </div>
+            <div class="img-wrapper">
+               <img src="http://placehold.it/175x175">
+               <img src="http://placehold.it/175x175">
+               <img src="http://placehold.it/175x175">
+               <img src="http://placehold.it/175x175">
+               <img src="http://placehold.it/175x175">
+            </div>
+        </div>
+    </section>
+
 	</main>
 
     <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous">
     </script>
     <script src="js/nav.js"></script>
+    <script src="js/gallery.js"></script>
 </body>
 
 </html>
